stats html worked

--- a/mysite/sightings/templates/sightings/stats.html
+++ b/mysite/sightings/templates/sightings/stats.html
@@ -11,7 +11,7 @@
 	<h2>Climbing: The total number of squirrels that are climbing: {{Climbing}}</h2>
 	<h2>Eating: The total number of squirrels that are eating: {{Eating}}</h2>
         <h2>Foraging: The total number of squirrels that are foraging: {{Foraging}}</h2>
-	<a href="{% url 'sightings:display' %}">Go back to Home Page.</a>
 
+        <a href="/sightings/">Go back to sightings.</a>
     </body>
 </html>
