--- a/mysite/sightings/templates/sightings/modify.html
+++ b/mysite/sightings/templates/sightings/modify.html
@@ -1,22 +1,13 @@
+<html>
 <h1>Edit Squirrel Sighting</h1>
-
-<form method="post" novalidate>
-  {% csrf_token %}
-  {{ form.non_field_errors }}
-  {% for hidden_field in form.hidden_fields %}
-    {{ hidden_field.errors }}
-    {{ hidden_field }}
-  {% endfor %}
-  <table border="1">
-    {% for field in form.visible_fields %}
-      <tr>
-        <th>{{ field.label_tag }}</th>
-        <td>
-          {{ field.errors }}
-          {{ field }}
-        </td>
-      </tr>
-    {% endfor %}
-  </table>
-  <input type='submit' value='Save' />
-</form>
+<body>
+  	<div class="miniwrap">
+    	<form  method="POST" id="updatesquirrel">
+        	{% csrf_token %}
+		      {{form.as_ul}}
+        	<input type="submit" name='Submit'>
+        <br>
+    	</form>	
+   	</div> 
+    </body>
+</html>
