--- a/mysite/sightings/templates/sightings/stats.html
+++ b/mysite/sightings/templates/sightings/stats.html
@@ -12,6 +12,13 @@
 	<h2>Eating: The total number of squirrels that are eating: {{Eating}}</h2>
         <h2>Foraging: The total number of squirrels that are foraging: {{Foraging}}</h2>
 
-        <a href="/sightings/">Go back to sightings.</a>
+    <ul>
+    <li> <p> Map Link</p> </li>
+    <a href="/map/">Squirrel Tracker</a>
+    <br>
+    <li> <p> Sightings Link</p> </li>
+    <a href="/sightings/">Sightings List</a>
+    <br>
+</ul>
     </body>
 </html>
