--- a/mysite/sightings/templates/sightings/modify.html
+++ b/mysite/sightings/templates/sightings/modify.html
@@ -9,5 +9,13 @@
         <br>
     	</form>	
    	</div>
+<ul>
+    <li> <p> Map Link</p> </li>
+    <a href="/map/">Squirrel Tracker</a>
+    <br>
+    <li> <p> Sightings Link</p> </li>
+    <a href="/sightings/">Sightings List</a>
+    <br>
     </body>
+</ul>
 </html>
