--- a/mysite/sightings/templates/sightings/display.html
+++ b/mysite/sightings/templates/sightings/display.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1><center> Squirrel Sightings</center></h1>
+    <h1><center> 🐿️Squirrel Sightings🐿️</center></h1>
     <nav>
       <h2><center>Link</center></h2>
       <a href="/map/"><p style="text-align:center;">Map Link</a>
