--- a/mysite/sightings/templates/sightings/modify.html
+++ b/mysite/sightings/templates/sightings/modify.html
@@ -1,5 +1,5 @@
 <html>
-<h1>Edit Squirrel Sighting</h1>
+<h2><center>🐿️Edit Squirrel Sighting🐿️</center></h2>
 <body>
   	<div class="miniwrap">
         <form action="" method="post", class="post-form">
