--- a/mysite/sightings/templates/sightings/stats.html
+++ b/mysite/sightings/templates/sightings/stats.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title> General Information About Sighitng Statistics  </title>
+<h2><center> 🐿️General Information About Sighitng Statistics🐿️ </center></h2>
 </head>
     <body>
-        <h2>Total_Sightings: The total number of squirrels: {{Total_Sightings}}</h2>
-	<h2>Age_Adult: The total number of squirrels that are Adult: {{Age_Adult}}</h2>
-        <h2>Age_Juvenile: The total number of squirrels that are Juvenile: {{Age_Juvenile}}</h2>
-        <h2>Running: The total number of squirrels that are running: {{Running}}</h2>
-	<h2>Chasing: The total number of squirrels that are chasing: {{Chasing}}</h2>
-	<h2>Climbing: The total number of squirrels that are climbing: {{Climbing}}</h2>
-	<h2>Eating: The total number of squirrels that are eating: {{Eating}}</h2>
-        <h2>Foraging: The total number of squirrels that are foraging: {{Foraging}}</h2>
+        <p>Total_Sightings: The total number of squirrels: {{Total_Sightings}}</p>
+	<p>Age_Adult: The total number of squirrels that are Adult: {{Age_Adult}}</p>
+        <p>Age_Juvenile: The total number of squirrels that are Juvenile: {{Age_Juvenile}}</p>
+        <p>Running: The total number of squirrels that are running: {{Running}}</p>
+	<p>Chasing: The total number of squirrels that are chasing: {{Chasing}}</p>
+	<p>Climbing: The total number of squirrels that are climbing: {{Climbing}}</p>
+	<p>Eating: The total number of squirrels that are eating: {{Eating}}</p>
+        <p>Foraging: The total number of squirrels that are foraging: {{Foraging}}</p>
 
     <ul>
     <li> <p> Map Link</p> </li>
